tests/NormalTests/paczka1/small_fuzzy/17204828.err
Error in line 9: S17 S617 71,2
Error in line 12: bPGKeW0e SJ7 6J,8
